--- a/desarrollo-web/css/estilos.css
+++ b/desarrollo-web/css/estilos.css
@@ -19,8 +19,8 @@ h1 {
     line-height: 1.5;
     letter-spacing: -.2px;
     color: white;
-    /*text-transform: uppercase;*/
-    /*text-decoration: dashed;*/
+    margin: 0;
+
 }
 
 
@@ -35,6 +35,8 @@ h1 strong{
     background-size: 500px 300px;
     background-repeat: no-repeat;
     background-position-x: right;
+    display: flex;
+    align-items: center;
 }
 
 .project-details {
@@ -48,10 +50,56 @@ h1 strong{
 .header{
     background-color: #1b2127;
     color: white;
-    
+    display: flex;
+    height: 70px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+ol ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+figure {
+    margin: 0;
 }
 
 .header a{
     color: white;
     text-decoration: none;
+    align-items: center;
+    height: inherit;
+    padding: 0 10px;
+}
+
+.menu {
+    height: inherit;
+}
+.header ol {
+    display: flex;
+    height: inherit;    
+}
+
+.header ol li {
+    height: inherit;
+    display: flex;
+    align-items: center;
+
+}
+.footer{
+    color: white;
+    background-color:  #1b2127;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer img {
+    vertical-align: middle;
+}
+
+.footer a {
+    color: white;
 }
